mutants.out/log/src__probe__frameworks.rs_line_68_col_5_001.log

*** src/probe/frameworks.rs:68:5: replace level5_frameworks -> Option<AneFrameworks> with Some(Default::default())

*** mutation diff:
--- src/probe/frameworks.rs
+++ replace level5_frameworks -> Option<AneFrameworks> with Some(Default::default())
@@ -60,75 +60,17 @@
     unsafe { dlsym(rtld_default, c.as_ptr()) }
 }
 
 // ============================================================
 // Level 5: Load ANE Frameworks (C API)
 // ============================================================
 
 pub(crate) fn level5_frameworks() -> Option<AneFrameworks> {
-    println!("\n═══════════════════════════════════════════════════");
-    println!("  LEVEL 5: Load ANE Frameworks (C API)");
-    println!("═══════════════════════════════════════════════════\n");
-
-    let engine = load_framework("AppleNeuralEngine");
-    let compiler = load_framework("ANECompiler");
-    let services = load_framework("ANEServices");
-
-    // Now scan for key C functions across all loaded images
-    println!("\n  Key C functions (no ObjC needed):");
-    let key_symbols = [
-        // Compiler
-        "ANECCompile",
-        "ANECCompileJIT",
-        "ANECCompileOnline",
-        "ANECCompileOffline",
-        "ANECCreateCompilerInputDictionary",
-        "ANECCreateCompilerOptionDictionary",
-        "ANECCreateModelDictionary",
-        "ANECCreateDeviceProperty",
-        "ANECGetDeviceProperty",
-        "ANECValidate",
-        "ANECGetCompilerFileFormat",
-        // Services
-        "ANEServicesDeviceOpen",
-        "ANEServicesDeviceClose",
-        "ANEServicesProgramCreate",
-        "ANEServicesProgramPrepare",
-        "ANEServicesProgramInputsReady",
-        "ANEServicesProgramDestroy",
-        "ANEServicesProgramStop",
-        "ANEServicesProgramProcessRequestDirect",
-        "ANEServicesProgramOutputSetEnqueue",
-        "ANEServicesProgramMemoryMapRequest",
-        "ANEServicesProgramMemoryUnmapRequest",
-        "ANEServicesProgramChainingPrepare",
-        "ANEServicesInitializePlatformServices",
-        // Validation
-        "ANEValidateMILNetworkOnHost",
-        "ANEValidateNetworkCreate",
-        "ANEGetValidateNetworkSupportedVersion",
-    ];
-
-    for sym in &key_symbols {
-        let p = find_sym(sym);
-        if !p.is_null() {
-            println!("  [+] {:50} @ {:?}", sym, p);
-        }
-    }
-
-    if compiler.is_null() && services.is_null() && engine.is_null() {
-        return None;
-    }
-
-    Some(AneFrameworks {
-        compiler,
-        services,
-        engine,
-    })
+    Some(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 // ============================================================
 // Level 6: Architecture Discovery + XPC detection
 // ============================================================
 
 pub(crate) fn level6_direct_api() {
     println!("\n═══════════════════════════════════════════════════");


*** /Users/mastercyb/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=rane@0.1.0
       Fresh crossbeam-utils v0.8.21
       Fresh crossbeam-queue v0.3.12
       Fresh unimem v0.1.0 (/Users/mastercyb/git/unimem)
       Fresh acpu v0.1.0 (/Users/mastercyb/git/acpu)
       Dirty rane v0.1.0 (/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp): the file `src/probe/frameworks.rs` has changed (1775043380.839998072s, 4s after last build at 1775043376.422279646s)
   Compiling rane v0.1.0 (/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp)
     Running `/Users/mastercyb/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name rane_probe --edition=2021 src/probe/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=4bc42abd1761e143 -C extra-filename=-389f422620ed0214 --out-dir /private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps -C incremental=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/incremental -L dependency=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps --extern acpu=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libacpu-356fb24183414b8b.rlib --extern rane=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/librane-9dba0de8bd33b846.rlib --extern unimem=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libunimem-5f3db965c562320d.rlib`
     Running `/Users/mastercyb/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name rane_probe --edition=2021 src/probe/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type bin --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fba5b9fcd8f4be69 -C extra-filename=-d97ac62dd57c62e6 --out-dir /private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps -C incremental=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/incremental -L dependency=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps --extern acpu=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libacpu-356fb24183414b8b.rlib --extern rane=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/librane-9dba0de8bd33b846.rlib --extern unimem=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libunimem-5f3db965c562320d.rlib`
error[E0277]: the trait bound `AneFrameworks: Default` is not satisfied
  --> src/probe/frameworks.rs:68:10
   |
68 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
   |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `AneFrameworks`
   |
help: consider annotating `AneFrameworks` with `#[derive(Default)]`
   |
32 + #[derive(Default)]
33 | pub(crate) struct AneFrameworks {
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `rane` (bin "rane_probe" test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/mastercyb/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name rane_probe --edition=2021 src/probe/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=4bc42abd1761e143 -C extra-filename=-389f422620ed0214 --out-dir /private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps -C incremental=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/incremental -L dependency=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps --extern acpu=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libacpu-356fb24183414b8b.rlib --extern rane=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/librane-9dba0de8bd33b846.rlib --extern unimem=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libunimem-5f3db965c562320d.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `rane` (bin "rane_probe") due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/mastercyb/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name rane_probe --edition=2021 src/probe/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type bin --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fba5b9fcd8f4be69 -C extra-filename=-d97ac62dd57c62e6 --out-dir /private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps -C incremental=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/incremental -L dependency=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps --extern acpu=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libacpu-356fb24183414b8b.rlib --extern rane=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/librane-9dba0de8bd33b846.rlib --extern unimem=/private/var/folders/55/99z672mn2w7_5zwfg60nnvb40000gn/T/cargo-mutants-rane-iNXDRd.tmp/target/debug/deps/libunimem-5f3db965c562320d.rlib` (exit status: 1)

*** result: Failure(101)
